# cyber-crypto-practice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  parser.h
collision/: CMakeLists.txt  README.md
collision/birthday_attack/: README.md  sm3_birthday_attack.py
collision/birthday_attack/include/: sm3.h
collision/birthday_attack/src/: aa.py  aaa.cc  endian.h  sm3_birthday_attack.cc  sm3_birthday_attack.py
collision/rho_attack/: README.md  rho_pollard.py
collision/rho_attack/src/: sm3_rho_attack.cc  sm3_rho_attack.py
lenExAttack/: README.md  SM3.py  const.py  len_ex_attack.py  lex_ex_attack_strict.py
meow/: README.md
meow/include/: color.py  meow.py  util.py
meow/mewo_inv/: README.md  meow_inv_test.py  meow_inverse.py
meow/mewo_sym/: README.md  meow_sym_test.py  meow_symmetry.py
merkelTree/: merkel.py  merkle_rfc6962.py  render.py  test.py
merkleTree/: README.md  merkle_rfc6962.py
parser/: paser.cc
sm2/: README.md  sm2.py  smss.py
sm3/: CMakeLists.txt  README.md  sm3.md
sm3/ref/sm3_gmssl/: endian.h  sm3.cc  sm3.h  sm3_gmssl.md
sm3/ref/sm3_std/: print.c  print.h  sm3_main.c  sm3_std.c  sm3_std.h  sm3_std.md
sm3/sm3_base/: CMakeLists.txt  endian.h  sm3.c
sm3/sm3_base/include/: func.h
sm3/sm3_reduced/: CMakeLists.txt
sm3/sm3_reduced/include/: func.h  sm3.h
sm3/sm3_reduced/src/: sm3.c
sm3/sm3_simd/: CMakeLists.txt  func.h  sm3.c
sm3/sm3_simd/src/: sm3.c
sm3/sm3_unroll/: CMakeLists.txt
sm3/sm3_unroll/include/: func.h
sm3/sm3_unroll/src/: sm3.c
sm3/test/: CMakeLists.txt
sm3/test/src/: main.c  test_gmssl.c  test_reduced.c
sm4/: README.md  sm4.md
